--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 #baseurl: /harmony
 
 # Site live URL
-url: http://127.0.0.1:4000
+url: http://dariusbakunas.github.io
 
 # Localhost 
 #url: http://192.168.0.102:4000
