Added blockquote to default layout

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@
 # Site live URL
 url: http://dariusbakunas.github.io
 
+mainquote: Technology is a word that describes something that doesn’t work yet. -Douglas Adams
 # Localhost 
 #url: http://192.168.0.102:4000
 
