--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ harmony:
     url: http://dariusbakunas.github.io
 
   # Google Analytics key, leave blank to ignore
-  google_analytics_key:
+  google_analytics_key: UA-55669408-1
 
   # Profile links, leave blank to ignore
   social: 
