update url setting in _config

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 #baseurl: /harmony
 
 # Site live URL
-#url: http://dariusbakunas.github.io
+url: http://dariusbakunas.github.io
 
 mainquote: Technology is a word that describes something that doesn’t work yet. -Douglas Adams
 # Localhost 
