--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -22,7 +22,7 @@ harmony:
     url: http://dariusbakunas.github.io
 
   # Google Analytics key, leave blank to ignore
-  google_analytics_key: UA-55669408-1
+  # google_analytics_key: UA-55669408-1
 
   # Profile links, leave blank to ignore
   social: 
